--- a/1/A/02.tex
+++ b/1/A/02.tex
@@ -290,36 +290,36 @@ $x_0=0$．这时质点的位移就可以用末位置的坐标来表示：
 
 \end{enumerate}
 
-\section{匀速直线运动的图象}
-    物体运动的情况可以用公式来表示，也可以用函数图象
-来表示．这一节学习怎样用图象来表示匀速直线运动．
+\section{匀速直线运动的图像}
+    物体运动的情况可以用公式来表示，也可以用函数图像
+来表示．这一节学习怎样用图像来表示匀速直线运动．
 
-    \subsection{匀速直线运动的位移图象} 
+    \subsection{匀速直线运动的位移图像} 
     
     任意选择一个平面直角坐标
 系、用横轴表示时间，用纵轴表示位移，画出位移和时间的关
-系图线，这种图象叫做\textbf{位移—时间图象}，简称为\textbf{位移图象}，匀速直线运动的位移$s$
+系图线，这种图像叫做\textbf{位移—时间图像}，简称为\textbf{位移图像}，匀速直线运动的位移$s$
 是时间$t$的正比函数$s=vt$．
 \begin{figure}[htp]
     \centering
     \includegraphics{fig/A/2-8.pdf}
-    \caption{匀速运动的位移图象．
+    \caption{匀速运动的位移图像．
     取初位置为坐标原点时，质点的位移等于末位置的坐标，因此这个
-    图象也可以叫做质点的位置—时间图象．}\label{fig_A_2-8}
+    图像也可以叫做质点的位置—时间图像．}\label{fig_A_2-8}
 \end{figure}
 
-在初中数学里已经学过，正比函数的图象是一条通过原
+在初中数学里已经学过，正比函数的图像是一条通过原
 点的直线．图~\ref{fig_A_2-8} 中的直线~I是速度为$20 \Ums$的匀速运动
-的位移图象，直线II是速度为$v=3 \Ums$的位移图象．
+的位移图像，直线II是速度为$v=3 \Ums$的位移图像．
 
 
-    应用匀速运动的位移图象，我们可以求出物体在任意时
+    应用匀速运动的位移图像，我们可以求出物体在任意时
 间内的位移．例如从图~\ref{fig_A_2-8} 可以求出，$v=2\Ums$的匀速运动
-在2.5秒内的位移是5米，应用位移图象也可以反过来求出
+在2.5秒内的位移是5米，应用位移图像也可以反过来求出
 物体通过任一位移所需的时间．
 
 
-我们还可以从匀速运动的位移图象求出物体的速度．
+我们还可以从匀速运动的位移图像求出物体的速度．
 
 \begin{figure}[htp]
     \centering
@@ -345,33 +345,33 @@ $\Delta s/\Delta t$叫做直线的\textbf{斜
 越陡，表示速度越大．
 
  
-\subsection{匀速直线运动的速度图象} 
+\subsection{匀速直线运动的速度图像} 
 
 匀速直线运动的速度和时间
-的关系，也可以用图象来表示．
+的关系，也可以用图像来表示．
 
 在平面直角坐标系中，用横轴表示时间，用纵轴表示速
-度，画出速度和时间关系的图线，这种图象叫做运动的\textbf{速度—时间图象}，简称为\textbf{速度图象}．匀速运动的速度不随时间改变，
-它的速度图象是一条与横轴平行的直线，图~\ref{fig_A_2-10} 中的两条直
+度，画出速度和时间关系的图线，这种图像叫做运动的\textbf{速度—时间图像}，简称为\textbf{速度图像}．匀速运动的速度不随时间改变，
+它的速度图像是一条与横轴平行的直线，图~\ref{fig_A_2-10} 中的两条直
 线I和II分别表示$v=2$$\Ums$和$v=5$$\Ums$的匀速运动的
-速度图象．在同一个坐标平面上，图象的直线在纵轴上的截
+速度图像．在同一个坐标平面上，图像的直线在纵轴上的截
 距越大，表示速度越大．
 \begin{figure}[htp]
     \centering
     \begin{minipage}[t]{0.48\textwidth}
         \centering
         \includegraphics{fig/A/2-10.pdf}
-        \caption{匀速运动的速度图象}\label{fig_A_2-10}
+        \caption{匀速运动的速度图像}\label{fig_A_2-10}
     \end{minipage}
     \begin{minipage}[t]{0.48\textwidth}
         \centering
         \includegraphics{fig/A/2-11.pdf}
-        \caption{由速度图象求位移}\label{fig_A_2-11}
+        \caption{由速度图像求位移}\label{fig_A_2-11}
     \end{minipage}
 \end{figure}
 
-应用速度图象可以求出质点在任何时间内的位移，设有
-一个骑自行车的人以3$\Ums$的速度做匀速运动，速度图象如
+应用速度图像可以求出质点在任何时间内的位移，设有
+一个骑自行车的人以3$\Ums$的速度做匀速运动，速度图像如
 图~\ref{fig_A_2-11} 所示．现在来求他在5秒钟内的位移．为了求出位
 移，根据公式$s=vt$，必须用时间和速度相乘，也就是用横轴
 上的线段$OA=5$秒和纵轴上的线段$OB=3$$\Ums$相乘．图~\ref{fig_A_2-11} 
@@ -397,24 +397,24 @@ $\Delta s/\Delta t$叫做直线的\textbf{斜
 
 \begin{enumerate}
 \item 
-图~\ref{fig_A_2-12} 是一架民航飞机的位移图象．从这个图象求出
+图~\ref{fig_A_2-12} 是一架民航飞机的位移图像．从这个图像求出
 \begin{enumerate}
     \item 飞机在30分钟内的位移；
     \item 飞行700千米所用的时间；
-    \item 飞行速度并画出速度图象．
+    \item 飞行速度并画出速度图像．
 \end{enumerate}
 
 \item  
-图~\ref{fig_A_2-13} 是一辆火车运动的位移图象．线段$OA$和$BC$
+图~\ref{fig_A_2-13} 是一辆火车运动的位移图像．线段$OA$和$BC$
 所表示的运动，哪个速度大？各等于多大？线段AB与横轴平
 行，表示火车做什么运动？速度是多大？火车在3小时内的位移
-是多少？通过80千米用多长时间？画出火车的速度图象．
+是多少？通过80千米用多长时间？画出火车的速度图像．
 
 
 \item  
 有两个物体，从同一点开始向相同方向做匀速运动，
 速度分别是3$\Ums$和5$\Ums$，在同一个坐标平面上画出它们
-的位移图象和速度图象，并根据这两种图象分别求出它们在5
+的位移图像和速度图像，并根据这两种图像分别求出它们在5
 秒内的位移．
 
 \end{enumerate}
@@ -714,7 +714,7 @@ v_0&=v_t-at\\
 \end{solution}
 
 
-\subsection{匀变速运动的速度图象}
+\subsection{匀变速运动的速度图像}
 
 
 \begin{figure}[htp]
@@ -746,19 +746,19 @@ v_0&=v_t-at\\
 \end{figure}
 
 匀变速运动的速度和时间的关
-系，也可以用图象来表示．由于$v_t=v_0+at$是时间$t$的一次
-函数，所以匀变速运动的速度—时间图象（简称为速度图象）是
-一条直线，图~\ref{fig_A_2-15} 是初速度为零的匀变速运动的速度图象，
+系，也可以用图像来表示．由于$v_t=v_0+at$是时间$t$的一次
+函数，所以匀变速运动的速度—时间图像（简称为速度图像）是
+一条直线，图~\ref{fig_A_2-15} 是初速度为零的匀变速运动的速度图像，
 图~\ref{fig_A_2-16} 是初速度不为零而加速度为正值的匀变速运动的速
-度图象，图~\ref{fig_A_2-17} 是初速度不为零而加速度为负值的匀变速
-运动的速度图象．从匀变速运动的速度图象可以求出任意时
+度图像，图~\ref{fig_A_2-17} 是初速度不为零而加速度为负值的匀变速
+运动的速度图像．从匀变速运动的速度图像可以求出任意时
 刻物体的速度，例如从图~\ref{fig_A_2-15} 可以求出4秒末的速度是10
-$\Ums$．从匀变速运动的速度图象也可以求出物体达到某一
+$\Ums$．从匀变速运动的速度图像也可以求出物体达到某一
 速度所需的时间．例如从图~\ref{fig_A_2-16} 可以求出速度达到8$\Ums$
 所需的时间是4秒．
 
 
-    从匀变速运动的速度图象还可以求出加速度．在图~\ref{fig_A_2-18} 所示的速度图象中，用$\Delta t$表示$t_2-t_1$，用$\Delta v$表示$v_2-v_1$，
+    从匀变速运动的速度图像还可以求出加速度．在图~\ref{fig_A_2-18} 所示的速度图像中，用$\Delta t$表示$t_2-t_1$，用$\Delta v$表示$v_2-v_1$，
 直线$AB$的斜率$k$为
 \[k=\frac{\Delta v}{\Delta t}=a \]
 这就是说，匀变速直线运动的速度图线的斜率，等于运动物体
@@ -817,7 +817,7 @@ $\Ums$．从匀变速运动的速度图象也可以求出物体达到某一
 示，因此上面设想的物体运动在时间$t$内的位移，其数值等于
 图中阶梯状折线$AA'BB'CC'\cdots$下面画有斜线部分的面积．
 如某时间的分割再细一些（图~\ref{fig_A_2-19b}），物体速度的跃变发生
-得更频繁，它的速度图象就更接近于汽车的真实运动的图象，
+得更频繁，它的速度图像就更接近于汽车的真实运动的图像，
 阶梯状折线和横轴间画有斜线部分的面积数值，就更接近于
 物体的实际位移，这样不断细分下去，当时间间隔分得足够
 小时，或
@@ -1383,11 +1383,11 @@ s&=v_0 t-\frac{1}{2}gt^2\\
 匀变速直线运动的两个有用的推论是什么？
 \item 自由落体运动的加速度$g$有多大？怎样求出自由落体的下落速度和下落距离？
 \item 已知竖直上抛物体的上抛速度$v_0$，怎样求出它的速度和位移？竖直上抛运动可以分上升运动和下降运动两步来计算，也可以用统一的公式来计算，哪种办法比较简便？
-\item 匀速直线运动的位移图象是一条什么样的图线？怎样从这个图象求出物体的速度？
+\item 匀速直线运动的位移图像是一条什么样的图线？怎样从这个图像求出物体的速度？
 
-匀速直线运动的速度图象是一条什么样的图线？怎样从这个图象求出物体的位移？
+匀速直线运动的速度图像是一条什么样的图线？怎样从这个图像求出物体的位移？
 
-匀变速直线运动的速度图象是一条什么样的图线？怎样从这个图象求出物体的位移？
+匀变速直线运动的速度图像是一条什么样的图线？怎样从这个图像求出物体的位移？
 
 \end{enumerate}
 
