--- a/1/A/03.tex
+++ b/1/A/03.tex
@@ -170,7 +170,7 @@
 课后同学们可以根据自己实验的记录纸带，来
 判断小车是否做匀变速运动．
 
-在这个实验中还可以进一步求出加速度的大小．加速度的大小可以用实验七中所讲的利用速度图象来求，也可以用下述方法来求．
+在这个实验中还可以进一步求出加速度的大小．加速度的大小可以用实验七中所讲的利用速度图像来求，也可以用下述方法来求．
 在纸带上的不同部位分别选取几段距离，用实验七的方法分别求出各段的初速度$v_0$和末速度$v_t$，利用公式$a=(v_t-v_0)/t$分别求出各段的加速度，然后算出平均值作
 为小车在整个运动过程中的加速度．课后同学们可以根据自己实验的记录纸带算出小车的加速度．
 
@@ -202,16 +202,16 @@
 	\begin{minipage}[b]{0.45\linewidth}
 		\centering
 		\includegraphics{fig/A/3-4.pdf}
-		\captionof{figure}{$a-F$图象}\label{fig_A_3-4}
+		\captionof{figure}{$a-F$图像}\label{fig_A_3-4}
 	\end{minipage}
 \end{table}
 
 
 
-怎样研究这些数据呢？物理实验中最常用的办法是利用图象．
+怎样研究这些数据呢？物理实验中最常用的办法是利用图像．
 取横坐标表示力$F$，纵坐标表示加速度$a$，根据实验数据在坐标平面上画出相应的点，
-再把这些点连起来作出图象．实验结果表明，得到的图象是一条通过原点的直线（图~\ref{fig_A_3-4}）．
-这说明物体得到的加速度跟物体所受的外力成正比．课后根据你自己的实验数据作出图象，你得到的是什么图象？
+再把这些点连起来作出图像．实验结果表明，得到的图像是一条通过原点的直线（图~\ref{fig_A_3-4}）．
+这说明物体得到的加速度跟物体所受的外力成正比．课后根据你自己的实验数据作出图像，你得到的是什么图像？
 
 
 
@@ -231,8 +231,8 @@
 
 \subsection*{练习二}
 \begin{enumerate}
-	\item 根据你的记录纸带，量出有关数值，计算出每次实验的加速度，列出表格，作出$a-F$图象．
-	\item 利用你自己的数据算出每次实验中$a$和$F$的比值，看看这些比值是否大致相同？利用这种办法来研究$a$和$F$的关系，比起用图象来研究，哪种办法方便？
+	\item 根据你的记录纸带，量出有关数值，计算出每次实验的加速度，列出表格，作出$a-F$图像．
+	\item 利用你自己的数据算出每次实验中$a$和$F$的比值，看看这些比值是否大致相同？利用这种办法来研究$a$和$F$的关系，比起用图像来研究，哪种办法方便？
 	\item 5牛的力作用在一个物体上，能使它产生2$\Umsq$的加速度，要使它产生5$\Umsq$的加速度，需要多少牛的力？
 \end{enumerate}
 
@@ -248,12 +248,12 @@
 把各次实验中测得的加速度和质量的数据列表记录下来．
 表~\ref{tab_A_3-2} 是我们在实验中测得的数据，作为例子写在这里．
 
-用图象来处理上面的数据．取横坐标表示质量$m$,纵坐
-标表示加速度$a$，根据实验数据作出图象．我们看到，画出的图象是一条曲线（图~\ref{fig_A_3-5}）．
-我们很难从这个图象得到$a$和$m$是什么定量关系．
-想想看，怎样才能找出这个定量关系？能不能设法让所画的图象是一条直线呢？
-从$a-m$图象可以看出其中一个量增加，另一个量减小，于是猜想$a$和$m$可能是反比关系．
-现在改变一下作图方法，取横坐标表示$1/m$，纵坐标表示$a$，看看图象是怎样的．为此需要算出$1/m$的数值．
+用图像来处理上面的数据．取横坐标表示质量$m$,纵坐
+标表示加速度$a$，根据实验数据作出图像．我们看到，画出的图像是一条曲线（图~\ref{fig_A_3-5}）．
+我们很难从这个图像得到$a$和$m$是什么定量关系．
+想想看，怎样才能找出这个定量关系？能不能设法让所画的图像是一条直线呢？
+从$a-m$图像可以看出其中一个量增加，另一个量减小，于是猜想$a$和$m$可能是反比关系．
+现在改变一下作图方法，取横坐标表示$1/m$，纵坐标表示$a$，看看图像是怎样的．为此需要算出$1/m$的数值．
 表~\ref{tab_A_3-3} 是 $1/m$ 和相应的$a$的数据．
 
 \begin{table}[htbp]
@@ -278,15 +278,15 @@
 	\begin{minipage}[b]{0.45\linewidth}
 		\centering
 		\includegraphics{fig/A/3-5.pdf}
-		\captionof{figure}{$a-m$图象}\label{fig_A_3-5}
+		\captionof{figure}{$a-m$图像}\label{fig_A_3-5}
 	\end{minipage}
 \end{table}
 
 
 
 
-实验结果表明，得到的图象正是一条通过原点的直线（图~\ref{fig_A_3-6}）,这表明我们的猜想是正确的，课后同学们可以根据自己
-实验的数据，作出$a-1/m$图象．你得到的图象是一条直线吗？
+实验结果表明，得到的图像正是一条通过原点的直线（图~\ref{fig_A_3-6}）,这表明我们的猜想是正确的，课后同学们可以根据自己
+实验的数据，作出$a-1/m$图像．你得到的图像是一条直线吗？
 
 
 我们从实验中得到的结论是：\textit{在相同外力作用下，加速度跟质量成反比}．写成公式就是
@@ -320,7 +320,7 @@
 	\begin{minipage}[b]{0.45\linewidth}
 		\centering
 		\includegraphics{fig/A/3-6.pdf}
-		\captionof{figure}{$a-1/m$图象}\label{fig_A_3-6}
+		\captionof{figure}{$a-1/m$图像}\label{fig_A_3-6}
 	\end{minipage}
 \end{table}
 
@@ -330,10 +330,10 @@
 
 \subsection*{练习三}
 \begin{enumerate}
-	\item 根据你的记录纸带，量出有关数值，计算出每次实验的加速度，列出表格，作出$a-1/m$图象．
+	\item 根据你的记录纸带，量出有关数值，计算出每次实验的加速度，列出表格，作出$a-1/m$图像．
 \item 利用你自己的数据算出每次实验中$m$和$a$的乘积，
-看看乘积的数值是否大致相同？你由此能得出什么结论？利用这种办法来研究$a$和$m$的关系，比起用图象来研究，哪种办法方便？
-\item 你已经用图象研究了$a$和$F$、$a$和$m$的关系，谈谈用图象处理实验数据的好处．
+看看乘积的数值是否大致相同？你由此能得出什么结论？利用这种办法来研究$a$和$m$的关系，比起用图像来研究，哪种办法方便？
+\item 你已经用图像研究了$a$和$F$、$a$和$m$的关系，谈谈用图像处理实验数据的好处．
 \item 一辆卡车在空载时质量是$3.5\times 10^3$千克，载货时的质量是$6.0\times 10^3$千克．
 用同样大小的牵引力，如果空载时使卡车产生1.5$\Umsq$的加速度，载货时产生多大的加速度？（不考虑阻力）
 \end{enumerate}
