--- a/1/A/09.tex
+++ b/1/A/09.tex
@@ -232,62 +232,62 @@
 相和相差在振动和波的研究中是很重要的，今后的学习
 中常常要提到它们．
 
-\subsection{简谐振动的图象}
-物体的运动情况可以用公式来表示，也可以用图象来表示．
-我们以前学过，匀速直线运动的位移图象是一条通过原点的直线，简谐振动的位移图象是怎样的呢？
+\subsection{简谐振动的图像}
+物体的运动情况可以用公式来表示，也可以用图像来表示．
+我们以前学过，匀速直线运动的位移图像是一条通过原点的直线，简谐振动的位移图像是怎样的呢？
 \begin{figure}[htbp]
     \centering
     \includegraphics{fig/A/9-6.pdf}
-    \caption{摆的振动图象}\label{fig_A_9-6}
+    \caption{摆的振动图像}\label{fig_A_9-6}
 \end{figure}
 
-简谐振动的图象可以利用图~\ref{fig_A_9-6} 所示的装置直接从振动物体得到．把漏斗吊在支架上，下方放一块硬纸板，纸板上画一条直线$Ot$．
+简谐振动的图像可以利用图~\ref{fig_A_9-6} 所示的装置直接从振动物体得到．把漏斗吊在支架上，下方放一块硬纸板，纸板上画一条直线$Ot$．
 先使漏斗静止不动，使$O$点恰好在漏斗的正下
 方．然后在漏斗里装满细砂，让它摆动，同时沿着跟摆动垂
-直的方向匀速拉动硬纸板．因为每一时刻都从漏斗漏出细砂，所以落在硬纸板上的细砂就记录下各个时刻摆的位置．不断漏下的砂组成连续的砂流，在硬纸板上显示出一条曲线，这条曲线就是以横轴$Ot$表示时间、以纵轴表示对平衡位置的位移的振动图象．可以看到，摆的振动图象是正弦或余弦曲线．实际上，所有简谐振动的图象都是正弦或余弦曲线（图~\ref{fig_A_9-7}）．
+直的方向匀速拉动硬纸板．因为每一时刻都从漏斗漏出细砂，所以落在硬纸板上的细砂就记录下各个时刻摆的位置．不断漏下的砂组成连续的砂流，在硬纸板上显示出一条曲线，这条曲线就是以横轴$Ot$表示时间、以纵轴表示对平衡位置的位移的振动图像．可以看到，摆的振动图像是正弦或余弦曲线．实际上，所有简谐振动的图像都是正弦或余弦曲线（图~\ref{fig_A_9-7}）．
 \begin{figure}[htbp]
     \centering
     \includegraphics{fig/A/9-7.pdf}
-    \caption{简谐振动的图象}\label{fig_A_9-7}
+    \caption{简谐振动的图像}\label{fig_A_9-7}
 \end{figure}
 
-振动图象表示出振子对平衡位置的位移怎样随时间面变
+振动图像表示出振子对平衡位置的位移怎样随时间面变
 化，它可以告诉我们在任一时刻振子对平衡位置的位移．
-可见，振动图象直观地表示出了振动的情况．
+可见，振动图像直观地表示出了振动的情况．
 
-在振动图象上还可以表示出振幅和周期．
+在振动图像上还可以表示出振幅和周期．
 曲线的最大值等于振幅，相邻两个正（或负）的最大值之间的间隔等于周期．
 
-利用振动图象也可以比较振动的相．图~\ref{fig_A_9-8} 是同相的两个简谐振动的图象，从图象容易看出这两个振动的步调是一致的．图~\ref{fig_A_9-9} 是反相的两个简谐振动的图象，从图象容易看出这两个振动的步调恰好相反．
+利用振动图像也可以比较振动的相．图~\ref{fig_A_9-8} 是同相的两个简谐振动的图像，从图像容易看出这两个振动的步调是一致的．图~\ref{fig_A_9-9} 是反相的两个简谐振动的图像，从图像容易看出这两个振动的步调恰好相反．
 
 \begin{figure}[htbp]
     \centering
     \includegraphics{fig/A/9-8.pdf}
-    \caption{同相的两个简谐振动的图象（图中的箭头表示振子在该时刻的运动方向）}\label{fig_A_9-8}
+    \caption{同相的两个简谐振动的图像（图中的箭头表示振子在该时刻的运动方向）}\label{fig_A_9-8}
 \end{figure}
 
 \begin{figure}[htbp]
     \centering
     \includegraphics{fig/A/9-9.pdf}
-    \caption{反相的两个简谐振动的图象（图中的箭头表示振子在该时刻的运动方向）}\label{fig_A_9-9}
+    \caption{反相的两个简谐振动的图像（图中的箭头表示振子在该时刻的运动方向）}\label{fig_A_9-9}
 \end{figure}
 
-在许多实际工作中，例如监测地震，振动图象就是直接从振动体记录得来的．
-分析研究得到的图象可以了解振动的许多情况．
+在许多实际工作中，例如监测地震，振动图像就是直接从振动体记录得来的．
+分析研究得到的图像可以了解振动的许多情况．
 
 
 \subsection*{练习四}
 
 
 \begin{enumerate}
-    \item 图~\ref{fig_A_9-10} 是一个简谐振动的图象．根据图象确定它的振幅和周期．
+    \item 图~\ref{fig_A_9-10} 是一个简谐振动的图像．根据图像确定它的振幅和周期．
     \begin{figure}[htbp]
     	\centering
     	\includegraphics{fig/A/9-10.pdf}
     	\caption{}\label{fig_A_9-10}
     \end{figure}
     
-    \item 图~\ref{fig_A_9-10} 的振动图象是一条余弦曲线．
+    \item 图~\ref{fig_A_9-10} 的振动图像是一条余弦曲线．
     你能不能应用学过的数学知识算出下列时刻振子对平衡位置的位移？
     \begin{enumerate}
         \item $t=0.5$秒；
@@ -320,12 +320,12 @@
 
 简谐振动是一种理想化的振动，一旦供给振动系统一定的能量来使它开始振动，由于机械能守恒，它就要以一定的振幅永不停息地振动下去．可是实际上振动系统不可避免地要受到摩擦和其他阻力，即受到阻尼的作用．
 振动系统克服阻尼作用做功，系统的机械能就要损耗．
-这样，机械能随着时间逐渐减少，振动的振幅也逐渐减小．待到机械能耗尽之时，振动就停下来了．这种振幅逐渐减小的振动叫做\textbf{阻尼振动}．图~\ref{fig_A_9-11} 是阻尼振动的图象．
+这样，机械能随着时间逐渐减少，振动的振幅也逐渐减小．待到机械能耗尽之时，振动就停下来了．这种振幅逐渐减小的振动叫做\textbf{阻尼振动}．图~\ref{fig_A_9-11} 是阻尼振动的图像．
 
 \begin{figure}[htbp]
     \centering
     \includegraphics{fig/A/9-11.pdf}
-    \caption{阻尼振动的图象}\label{fig_A_9-11}
+    \caption{阻尼振动的图像}\label{fig_A_9-11}
 \end{figure}
 
 振动系统受到的阻尼越大，振幅减小得越快，振动停下来也越快．阻尼过大将不能产生振动．阻尼越小，振幅减小得越慢．在阻尼很小时，在一段不太长的时间内看不出振幅有明显的减小，就可以把振动系统当作简谐振动来处理．前面关于简谐振动的演示就属于这种情形．
@@ -528,12 +528,12 @@
     \item 仔细研究图~\ref{fig_A_9-15}，说明：两个相邻的反相质点间的距离等于波长的多少．
 \end{enumerate}
 
-\subsubsection{波的图象}
+\subsubsection{波的图像}
 
-波的运动情况可以用图象直观地表示出来．反之，知道了一列波的图象，也可以对图象进行分析，从而了解这列波的运动情况．
+波的运动情况可以用图像直观地表示出来．反之，知道了一列波的图像，也可以对图像进行分析，从而了解这列波的运动情况．
 
 用横坐标表示在波的传播方向上媒质各质点的平衡位置，纵坐标表示某一时刻各质点的位移矢量，连接各位移矢量
-末端得到的曲线，叫做\textbf{波的图象}，它表示某一时刻媒质各质点离开平衡位置的情况．
+末端得到的曲线，叫做\textbf{波的图像}，它表示某一时刻媒质各质点离开平衡位置的情况．
 \begin{figure}[htbp]
     \centering
     \begin{subfigure}{0.8\linewidth}
@@ -547,11 +547,11 @@
         \includegraphics{fig/A/9-17b.pdf}
         \caption{}\label{fig_A_9-17b}
     \end{subfigure}
-    \caption{横波的图象}\label{fig_A_9-17}
+    \caption{横波的图像}\label{fig_A_9-17}
 \end{figure}
 
 
-图~\ref{fig_A_9-17a} 表示某一时刻$t$绳上的一列横波，图~\ref{fig_A_9-17b} 是它的图象．可见图象直观地表现了这列横波在时刻$t$的形状——波形，从图象上可以直接看出各质点在时刻$t$的位移．
+图~\ref{fig_A_9-17a} 表示某一时刻$t$绳上的一列横波，图~\ref{fig_A_9-17b} 是它的图像．可见图像直观地表现了这列横波在时刻$t$的形状——波形，从图像上可以直接看出各质点在时刻$t$的位移．
 如果我们还知道这列波的传播方向和波速$v$，那么可以进一步知道任何时刻，例如再经过$\Delta t$时间以后，波的形状和各质点的位移，办法是照图~\ref{fig_A_9-18} 那样，使波形曲线沿着波的传播方向移动$v\Delta t=\Delta x$一段距离．
 \begin{figure}[htbp]
 	\centering
@@ -560,7 +560,7 @@
 \end{figure}
 
 
-在图~\ref{fig_A_9-19} 中，甲图表示一根没有发生形变的弹簧，上面标出一些质点的平衡位置；乙图表示弹簧中出现纵波时，某一时刻各个质点的位移情况；丙图表示的是这列纵波的图象．图
+在图~\ref{fig_A_9-19} 中，甲图表示一根没有发生形变的弹簧，上面标出一些质点的平衡位置；乙图表示弹簧中出现纵波时，某一时刻各个质点的位移情况；丙图表示的是这列纵波的图像．图
 象中，向上的纵坐标表示质点从平衡位置向右的位移，向下的纵坐标表示质点从平衡位置向左的位移，曲线跟横坐标轴的各个交点，依次表示纵波的密部和疏部的中央．
 
 
@@ -583,43 +583,43 @@
         \includegraphics{fig/A/9-19c.pdf}
         \caption{}\label{fig_A_9-19c}
     \end{subfigure}
-    \caption{纵波的图象．
+    \caption{纵波的图像．
     横坐标表示各质点所在的平衡位置，纵坐标表示各质点的位移．图中的$x_2$是质点$2$向右的位移，$x_5$是质点$5$向左的位移．}\label{fig_A_9-19}
 \end{figure}
 
 
 
-把图~\ref{fig_A_9-18} 和图~\ref{fig_A_9-19} 所示的波的图象跟图~\ref{fig_A_9-7} 所示的振动图象相比，会看到它们很相似．实际上，由简谐振动在媒质中传播所形成的波——简谐波，在任何时刻的图象都是正弦（或余弦）曲线，媒质的任何质点的振动图象也都是正弦（或余弦）曲线．例如，图~\ref{fig_A_9-20a} 是在一条绳上传播的简谐波在某一时刻的图象，图~\ref{fig_A_9-20b} 是这列波传播过程中绳上某一点的振动图象．
-这两条曲线变化规律相同，都按正弦（或余弦）规律变化，但是它们的物理意义不同．\textit{波的图象表示的是某一时刻各个质点的位移，振动图象表示的是某一质点在各个时刻的
-位移}．在波的图象中，相邻两个最大值之间的距离等于波长$\lambda$，在振动图象中，相邻两个最大值之间的间隔等于周期$T$．
+把图~\ref{fig_A_9-18} 和图~\ref{fig_A_9-19} 所示的波的图像跟图~\ref{fig_A_9-7} 所示的振动图像相比，会看到它们很相似．实际上，由简谐振动在媒质中传播所形成的波——简谐波，在任何时刻的图像都是正弦（或余弦）曲线，媒质的任何质点的振动图像也都是正弦（或余弦）曲线．例如，图~\ref{fig_A_9-20a} 是在一条绳上传播的简谐波在某一时刻的图像，图~\ref{fig_A_9-20b} 是这列波传播过程中绳上某一点的振动图像．
+这两条曲线变化规律相同，都按正弦（或余弦）规律变化，但是它们的物理意义不同．\textit{波的图像表示的是某一时刻各个质点的位移，振动图像表示的是某一质点在各个时刻的
+位移}．在波的图像中，相邻两个最大值之间的距离等于波长$\lambda$，在振动图像中，相邻两个最大值之间的间隔等于周期$T$．
 \begin{figure}[htbp]
     \centering
     \begin{subfigure}{0.8\linewidth}
         \centering
         \includegraphics{fig/A/9-20a.pdf}
-        \caption{一列简谐横波在某一时刻的图象}\label{fig_A_9-20a}
+        \caption{一列简谐横波在某一时刻的图像}\label{fig_A_9-20a}
     \end{subfigure}
     \\
     \begin{subfigure}{0.8\linewidth}
         \centering
         \includegraphics{fig/A/9-20b.pdf}
-        \caption{绳上某点的振动图象}\label{fig_A_9-20b}
+        \caption{绳上某点的振动图像}\label{fig_A_9-20b}
     \end{subfigure}
     \caption{}\label{fig_A_9-20}
 \end{figure}
 
-可见，对待图象也必须像对待表示物理概念或规律的公式那样，弄清它的物理意义．
+可见，对待图像也必须像对待表示物理概念或规律的公式那样，弄清它的物理意义．
 
 \subsection*{练习八}
 \begin{enumerate}
-    \item 振动图象和波的图象各表示的是什么内容？振动图象中相邻两个最大值之间的间隔等于什么？波的图象中相邻两个最大值之间的间隔等于什么？
+    \item 振动图像和波的图像各表示的是什么内容？振动图像中相邻两个最大值之间的间隔等于什么？波的图像中相邻两个最大值之间的间隔等于什么？
     \item 有一列波，它在某一时刻的波形曲线如图~\ref{fig_A_9-18} 中的实线所示．
     这列波经过$T/4$后的波形曲线是什么样？经过$2T/4$，$3T/4$后又是什么样？
-    \item 横波的图象直观地表现了横波在某一时刻的波形，纵波的图象却不能直观地表现纵波的情况，但是，我们看到纵波的图象应该很自然地想出纵波的情况，就像我们看到振动图象应该很自然地想出弹簧振子或单摆的振动情况一样．仔细考察图~\ref{fig_A_9-19}，回答下面的问题．
+    \item 横波的图像直观地表现了横波在某一时刻的波形，纵波的图像却不能直观地表现纵波的情况，但是，我们看到纵波的图像应该很自然地想出纵波的情况，就像我们看到振动图像应该很自然地想出弹簧振子或单摆的振动情况一样．仔细考察图~\ref{fig_A_9-19}，回答下面的问题．
     \begin{enumerate}
-        \item 在图象的什么地方质点向右的位移最大？
-        \item 在图象的什么地方质点向左的位移最大？
-        \item 在图象的什么地方质点的位移为零？
+        \item 在图像的什么地方质点向右的位移最大？
+        \item 在图像的什么地方质点向左的位移最大？
+        \item 在图像的什么地方质点的位移为零？
         \item 密部中央两侧质点的位移有什么特征？
         \item 疏部中央两侧质点的位移有什么特征？
     \end{enumerate}
@@ -1258,7 +1258,7 @@ $30\sim 40$分贝．
 \item 什么叫阻尼振动？什么叫受迫派动？受迫振动的频率等于什么？在什么情况下发生共振？举出共振的实例．
 \item 机械波是怎样产生的？为什么说波是传递能量的一种方式？什么叫横波和纵波？举出横波和纵波的实例．
 \item 波长、频率和波速之间的关系是怎样的？沿着波的传播方向，两个相邻的同相质点间的距离等于多长？两个相邻的反相质点间的距离等于多长？
-\item 说明振动图象和波动图象的意义，并加以比较．
+\item 说明振动图像和波动图像的意义，并加以比较．
 \item 两列波叠加时，媒质质点的总位移等于什么？什么是波的干涉？产生稳定的干涉现象的条件是什么？举出干涉的实例．
 \item 什么是波的衍射？产生明显的衍射现象的条件是什么？举出衍射的实例．
 \item 空气中的声波是怎样产生的？说明声波的反射、干涉、衍射以及声音的共鸣．
