--- a/1/A/app_01.tex
+++ b/1/A/app_01.tex
@@ -51,14 +51,14 @@ $3.65\times 10^4$千米．
 \end{table}
 
 从表~\ref{tab_A_10-1} 所列的数据可以看出，对一定深度的水，孔径越
-大，排尽水的时间越短．但是还看不出它们之间的定量关系．为了分析实验数据，常常利用图象，因为图象很直观，能为我们寻求物理量之间的定量关系提供线索．
+大，排尽水的时间越短．但是还看不出它们之间的定量关系．为了分析实验数据，常常利用图像，因为图像很直观，能为我们寻求物理量之间的定量关系提供线索．
 
-现在来做水深是30厘米时，排尽水的时间$t$和排水孔直径$d$的图象．用横坐示表示自变量即孔的直径$d$，用纵坐标表示因变量即排尽水的时间$t$．
+现在来做水深是30厘米时，排尽水的时间$t$和排水孔直径$d$的图像．用横坐示表示自变量即孔的直径$d$，用纵坐标表示因变量即排尽水的时间$t$．
 取表中水深30厘米时$t$与$d$的对应数据，在坐标平面上画出相应的点，把点用平滑曲线连接起来．
 
 从这条曲线可以看到$t$随$d$的增大而减小，但还不能看出它们之间是什么定量关系．于是我们进一步猜想排尽水的时间跟圆孔面积$S$可能有较为简单的关系．我们知道，圆面积$S=\pi d^2/4$，即$S$与$d^2$成正比．
-为了检验这一猜想，可以画出$t$与$1/d^2$的图象．
-如果画出的图象是一条直线，说明$t$与$1/d^2$成正比，即$t$与$d^2$成反比．为此，要计算$1/d^2$的数值．
+为了检验这一猜想，可以画出$t$与$1/d^2$的图像．
+如果画出的图像是一条直线，说明$t$与$1/d^2$成正比，即$t$与$d^2$成反比．为此，要计算$1/d^2$的数值．
 现将直径$d$值、排尽水的$t$值连同$1/d^2$的计算结果填入表~\ref{tab_A_10-2}．
 
 \begin{table}[htbp]
@@ -76,10 +76,10 @@ $3.65\times 10^4$千米．
     \end{tblr}
 \end{table}
 
-现在做$t-1/d^2$的图象，用横坐标表示$1/d^2$，纵坐标表示$t$，在坐标平面上画出相应的点，再把这些点连结起来．
-画出的图象是不是一条直线？我们的猜想正确吗？写出你的结论以及$t$与$d$的关系式．
+现在做$t-1/d^2$的图像，用横坐标表示$1/d^2$，纵坐标表示$t$，在坐标平面上画出相应的点，再把这些点连结起来．
+画出的图像是不是一条直线？我们的猜想正确吗？写出你的结论以及$t$与$d$的关系式．
 
-用同样方法分别画出水深为10厘米时$t-1/d^2$图象．验证一下你得到的结论．
+用同样方法分别画出水深为10厘米时$t-1/d^2$图像．验证一下你得到的结论．
 
 
 \section{游标卡尺的使用}
@@ -296,7 +296,7 @@ $3.65\times 10^4$千米．
 设计一个表格，把测出的$s_1 $，$ s_2 $，$ s_3 $，$ \cdots$的数值和算出的$\Delta s_1 $，$ \Delta s_2 $，$ \Delta s_3 $，$ \cdots$的数值填入表内．
 可以看出各个$\Delta s$在误差范围内相等，表示小车是做匀变速运动．
 
-下面我们利用速度图象来求小车的加速度．
+下面我们利用速度图像来求小车的加速度．
 先求出以$A$为起点，小车经过$T $，$ 2T $，$ 3T $，$ \cdots$时的即时速度$v_1 $，$ v_2 $，$ v_3 $，$ \cdots$，即打点计时器打下$B $，$ C $，$ D $，$ \cdots$各点时的即时速度．
 小车是做匀变速直线运动，它在某一段时间内的平均速度等于这段时间中点时刻的即时速度（见第\ref{chapter-rectilinear-motion}章，练习九，第5题）．
 所以
@@ -307,9 +307,9 @@ $3.65\times 10^4$千米．
 用横坐标表示时间，用纵坐标表示速度，在坐标平面上画出$(T,v_1) $，$ (2T,v_2) $，$ (3T,v_3) $，$ \cdots$各点．
 把这些点连结起来可以画出一条直线．画直线时尽量让多数的点在一直线上，不在直线上的各点，使它们对称地分布在直线的两旁．
 
-从速度图象上求出直线的斜率，就得到小车的加速度$a$．
+从速度图像上求出直线的斜率，就得到小车的加速度$a$．
 
-不用速度图象来求小车的加速度，是否还有其他的方法？想出一种方法来，用这种方法根据实验数据求出小车的加速度，并跟用速度图象求出的数值相比较．
+不用速度图像来求小车的加速度，是否还有其他的方法？想出一种方法来，用这种方法根据实验数据求出小车的加速度，并跟用速度图像求出的数值相比较．
 
 \section{研究加速度和力的关系}\label{sec-A-app-1-8-studying-the-relationship-between-acceleration-and-force}
 这个实验的具体作法见第\ref{chapter-law-of-motion}章第\ref{sec-A-3-relationship-between-acceleration-and-force}节课文．
