--- a/1/A/preface.tex
+++ b/1/A/preface.tex
@@ -95,12 +95,12 @@
 式$\rho=m/V$，功的公式$W=Fs$，欧姆定律的公式$I=U/R$，电
 功率的公式$P=UI$等等，都是我们在初中学过的物理公式，
 把概念和规律写成公式后，显得特别简单、明确，而且便于运
-用它们来进行分析、推理、论证．物理规律还常常用函数图象
+用它们来进行分析、推理、论证．物理规律还常常用函数图像
 来表示．在初中学过的给晶体和非晶体加热时它们在熔解前
 后温度随时间而变化的图线（图 \ref{fig_A_0-1}），就是一个例子．从图
 中很容易看出晶体和非晶体在熔解时表现出不同的特点，晶
 体在熔解时虽然继续受热但温度并不升高，非晶体就没有这
-个特点．图象的突出优点是它很直观，而且比较容易直接根
+个特点．图像的突出优点是它很直观，而且比较容易直接根
 据实验数据画出来．
 
 \begin{figure}[htp]\centering 
