--- a/1/C/03.tex
+++ b/1/C/03.tex
@@ -170,19 +170,19 @@ $\mathcal{E}_m=2B\ell v$．
 公式~\eqref{eq_C_3-1}、\eqref{eq_C_3-2}、\eqref{eq_C_3-3} 或者 \eqref{eq_C_3-4}、\eqref{eq_C_3-5}、\eqref{eq_C_3-6}，表示交流电是按照正弦规律变化的，这种按照正弦规律变化的交流电叫做\textbf{正弦交流电}．正弦交流电是一种最简单而又最基本的交流电，正如同简谐振动是一种最简单而又最基本的振动一样．
 	
 	
-交流电的变化规律也可以用图象直观地表示出来．
+交流电的变化规律也可以用图像直观地表示出来．
 图~\ref{fig_C_3-4} 是交变电动势$e=\mathcal{E}_m \sin \omega t$的图像．
 图像上方画出了对应于交变电动势等于零或正、负最大值时的线圈位置．
-图~\ref{fig_C_3-5} 是交变电流$i=I_m\sin(\omega t+\phi_0)$或交变电压 $u=U_m\sin(\omega t+\phi_0)$的图象，其中$\phi_0=\pi/6$．
+图~\ref{fig_C_3-5} 是交变电流$i=I_m\sin(\omega t+\phi_0)$或交变电压 $u=U_m\sin(\omega t+\phi_0)$的图像，其中$\phi_0=\pi/6$．
 \begin{figure}[htbp]
     \centering
     \includegraphics{fig/C/3-4.pdf}
-    \caption{$e=\mathcal{E}_m \sin \omega t$的图象}\label{fig_C_3-4}
+    \caption{$e=\mathcal{E}_m \sin \omega t$的图像}\label{fig_C_3-4}
 \end{figure}
 \begin{figure}[htbp]
     \centering
     \includegraphics{fig/C/3-5.pdf}
-    \caption{$i=I_m\sin(\omega t+\phi_0)$或$u=U_m\sin(\omega t+\phi_0)$的图象}\label{fig_C_3-5}
+    \caption{$i=I_m\sin(\omega t+\phi_0)$或$u=U_m\sin(\omega t+\phi_0)$的图像}\label{fig_C_3-5}
 \end{figure}
 
 
@@ -1618,7 +1618,7 @@ $i_{AX}$是正值，电流从始端$A$流向末端$X$；线圈$BY$中的电流$i
     \end{figure}
     \item 在图~\ref{fig_C_3-35} 所示的桥式整流电路中，变压器原副线圈的匝数比等于8，原线圈接在220伏的交流电路中，能不能选用最高反向工作电压为50伏的晶体二极管进行整流？为什么？
     \item 图~\ref{fig_C_3-60} 是电子技术中用到的限幅电路．
-    电池组的电动势都为$\mathcal{E}$，左端输入的是正弦交流电，电压$u_1$的最大值为$2\mathcal{E}$．试画出右端输出的电压$u_2$的图象，并分析说明理由．电池组的内电阻略去不计．
+    电池组的电动势都为$\mathcal{E}$，左端输入的是正弦交流电，电压$u_1$的最大值为$2\mathcal{E}$．试画出右端输出的电压$u_2$的图像，并分析说明理由．电池组的内电阻略去不计．
     \begin{figure}[htbp]
         \centering
         \includegraphics{fig/C/3-60.pdf}
