--- a/1/C/04.tex
+++ b/1/C/04.tex
@@ -201,13 +201,13 @@ $LC$回路的周期和频率跟哪些因素有关呢？让我们改变
 
 
 图~\ref{fig_C_4-7} 表示作正弦变化的电场或磁场所
-引起的电磁波在某一时刻的波的图象．波峰表示在该点的电场强度$E$或磁感应强度$B$在正方向具有最大值，波谷表示在该点的$E$或$B$在反方向具有最大值．两个相邻的波峰（或波谷）之间的距离等于电磁波的波长．在任一时刻，$E$和$B$沿电磁波的传播方向是作正弦变化的．
+引起的电磁波在某一时刻的波的图像．波峰表示在该点的电场强度$E$或磁感应强度$B$在正方向具有最大值，波谷表示在该点的$E$或$B$在反方向具有最大值．两个相邻的波峰（或波谷）之间的距离等于电磁波的波长．在任一时刻，$E$和$B$沿电磁波的传播方向是作正弦变化的．
 在传播方向上的任一点，$E$和$B$都是随时间作正弦变化的，即$E$和$B$在振动．$E$的振动方向平行于$x$轴，$B$的振动方向平行于$y$轴，它们彼此垂直，而且都跟波的传播方向垂直，因此电磁波是横波．
 
 \begin{figure}[htbp]
 	\centering
 	\includegraphics{fig/C/4-7.pdf}
-	\caption{沿$z$轴传播的电磁波在某一时刻的波的图象}\label{fig_C_4-7}
+	\caption{沿$z$轴传播的电磁波在某一时刻的波的图像}\label{fig_C_4-7}
 \end{figure}
 
 
