--- a/1/C/06.tex
+++ b/1/C/06.tex
@@ -648,7 +648,7 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 \section*{阅读材料：偏振光与立体电影}
 看立体电影，要戴上一副特殊的眼镜，这样从银幕上看到
 的人物和自然景物的影像才有立体感，犹如身临其境一般．如
-果取下眼镜，银幕上的图象就模糊不清了．这是一副什么眼
+果取下眼镜，银幕上的图像就模糊不清了．这是一副什么眼
 镜？为什么能使我们看到的影像有立体感？学习了偏振光的知
 识，就可以明白它的原理了．
 
@@ -661,7 +661,7 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 普通电影是用一架摄影机拍摄，一架放映机放映的，银幕
 上的画面是一幅平面图像．
 立体电影是用两架摄影机并排在
-一起，同时拍下同一景物的两幅图象，由于两架摄影机对景物
+一起，同时拍下同一景物的两幅图像，由于两架摄影机对景物
 的角度不同，所以拍下的两幅图像略有差别，就如同两眼看到
 的同一物体略有差别一样．
 放映时，用两架放映机把两架摄
