--- a/1/C/app_01.tex
+++ b/1/C/app_01.tex
@@ -81,9 +81,9 @@ $AB$边的受力方向与上一次比较
 经预热后，顺时针旋转辉度调节旋钮，可以看到不稳定的不一
 定清晰的波形．
 调整聚焦调节和辅助聚焦旋钮，使图线清晰．
-调整垂直位移和水平位移旋钮，使图象位置适中．
+调整垂直位移和水平位移旋钮，使图像位置适中．
 调整X增
-益旋钮，使图象大小合适．作好这些准备工作后，把同步开关
+益旋钮，使图像大小合适．作好这些准备工作后，把同步开关
 置于“$+$”位置，把扫描微调旋钮先顺时针转到底再慢慢地反
 时针旋转，当转到某一位置时，可以看到一个稳定的完整的正
 弦波形（图~\ref{fig_C_10-2a}）．
@@ -152,7 +152,7 @@ $AB$边的受力方向与上一次比较
 打开它
 们的电源开关，示波器的准备工作跟前面相同．
 逐步减小衰减
-档并调整Y增益，使图象的竖直幅度适宜．然后根据输入的
+档并调整Y增益，使图像的竖直幅度适宜．然后根据输入的
 信号频率选择适当的扫描范围并调整扫描微调，就可以看到
 稳定的整数个完整的波形．
 再慢慢调整扫描微调，可以看到
@@ -161,7 +161,7 @@ $AB$边的受力方向与上一次比较
 改变．把同步开关从“$+$”位置扳到“$-$”位置，可以看到波形
 改变半个周期．旋转信号源的低频增幅旋钮，观察波形的竖
 直幅度的改变．在观察过程中，必要时应随时调整辉度调节、
-聚焦调节和辅助聚焦，使图象亮度适宜，图线清晰．
+聚焦调节和辅助聚焦，使图像亮度适宜，图线清晰．
 
 利用示波器还可以测出输入的交流信号的电压的最大值
 并进而算出它的有效值．测量时应注意把Y增益旋钮顺时针
