--- a/1/A/01.tex
+++ b/1/A/01.tex
@@ -313,12 +313,12 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 弹力的大小$f$和弹簧伸长（或缩短）的长度$x$成正比．} 
 写成公式就是
 \[f=kx\]
-其中$k$是比例常数，叫做弹簧的\textbf{倔强系数} ．倔强系数是一个
+其中$k$是比例常数，叫做弹簧的\textbf{劲度系数} ．劲度系数是一个
 有单位的量．在国际单位制中，$f$的单位是牛，$x$的单位是
-米，$k$的单位是牛/米．倔强系数在数值上等于弹簧伸长（或
-缩短）单位长度时的弹力．倔强系数跟弹簧的长度、弹簧的材
+米，$k$的单位是牛/米．劲度系数在数值上等于弹簧伸长（或
+缩短）单位长度时的弹力．劲度系数跟弹簧的长度、弹簧的材
 料、弹簧丝的粗细等等都有关系．弹簧丝粗的硬弹簧比弹簧
-丝细的软弹簧倔强系数大．对于直杆和线的拉伸（或压缩）形
+丝细的软弹簧劲度系数大．对于直杆和线的拉伸（或压缩）形
 变，也有上述正比关系，这个规律是英国科学家胡克发现的，
 叫做\textbf{胡克定律} ．
 
@@ -334,12 +334,12 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 到的弹簧的弹力有多大？为什么？
 \item 把重量相同的两个物体分别挂在两根不同的弹簧
 上，一根弹簧伸长的长度小，另一根伸长的长度大，哪根弹簧
-的倔强系数大？
-\item 一根弹簧的倔强系数是100牛/米，伸长的长度为2厘
-米时，弹簧的弹力有多大？另一根弹簧的倔强系数是2000
+的劲度系数大？
+\item 一根弹簧的劲度系数是100牛/米，伸长的长度为2厘
+米时，弹簧的弹力有多大？另一根弹簧的劲度系数是2000
 牛/米，缩短的长度为3厘米时，弹簧的弹力有多大？
 \item 一根弹簧，不挂物体时长15厘米，挂上0.5千克的物
-体时长18厘米．这根弹簧的倔强系数有多大？
+体时长18厘米．这根弹簧的劲度系数有多大？
 \end{enumerate} 
 
 \section{摩擦力} 
