--- a/1/A/02.tex
+++ b/1/A/02.tex
@@ -420,7 +420,7 @@ $\Delta s/\Delta t$叫做直线的\textbf{斜
 \end{enumerate}
 
 
-\section{变速直线运动~~平均速度~~即时速度}
+\section{变速直线运动~~平均速度~~瞬时速度}
     \subsection{变速直线运动}
     
     我们日常看到的直线运动，往往不是匀
@@ -451,21 +451,21 @@ $\Delta s/\Delta t$叫做直线的\textbf{斜
 56$\Ukmh$，但在每个十分钟里的平均速度却是不同的，它
 的运动逐步加快．
 
-\subsection{即时速度}
+\subsection{瞬时速度}
 平均速度只能粗略地描述做变速运动的物体
 的运动情况，要精确地描述变速直线运动，还需要知道物体在
 每一时刻（或位置）的运动速度．运动物体在某一时刻（或某
-一位置）的速度，叫做\textbf{即时速度}．
+一位置）的速度，叫做\textbf{瞬时速度}．
 
 物体在某一时刻或某一位置的速度的意义是什么呢？图~\ref{fig_A_2-14} 
 表示一辆做变速运动的汽车．我们要确定汽车经过$A$点
-时的即时速度．从$A$起取一小段位移$AA_1$，求出在这段位移上
+时的瞬时速度．从$A$起取一小段位移$AA_1$，求出在这段位移上
 的平均速度，这个平均速度可以近似地表示汽车经过$A$点的
 快慢程度．从$A$起所取的位移越小，比如依次取位移$AA_2$、$AA_3$
 等，所得的平均速度用来表示汽车经过$A$点的快慢程度就
 越精确．当位移足够小时，
 或者说时间足够短时，所得
-的平均速度就等于汽车经过$A$点的即时速度了．
+的平均速度就等于汽车经过$A$点的瞬时速度了．
 
 这里所说的“足够短”，应该怎样理解呢？原来，做变速运
 动的物体的速度总是连续变化的，位移取得越小，或者说时间
@@ -473,7 +473,7 @@ $\Delta s/\Delta t$叫做直线的\textbf{斜
 测量仪器已经分辨不出变速运动和匀速运动的差别，可以认
 为这一小段时间的运动是匀速的．这时，即使进一步缩短所
 取的时间，测得的平均速度也不会有什么变化，这个平均速度
-就等于即时速度．
+就等于瞬时速度．
 
 \begin{figure}[htp]
     \centering
@@ -484,12 +484,12 @@ $\Delta s/\Delta t$叫做直线的\textbf{斜
 用数学语言可以更为精确地表达上面所讲的意思．在图~\ref{fig_A_2-14} 
 中从$A$起取一小段位移$\Delta s$，求出这小段位移内的平均
 速度$\Delta s/\Delta t$， 当$\Delta t$\textbf{趋近于}零时，平均速度\textbf{趋近于}某一固定数
-值—一极限值，这个极限值就是汽车经过$A$点的即时速度．
+值—一极限值，这个极限值就是汽车经过$A$点的瞬时速度．
 
-    即时速度既有大小，又有方向，是矢量．在直线运动中，
-即时速度的方向就是物体经过该点时的运动方向．即时速度
-的大小叫做\textbf{即时速率}，简称\textbf{速率}，它是一个表示物体运动快慢
-程度的标量，在某些问题中，如果只需考虑即时速度的大小，
+    瞬时速度既有大小，又有方向，是矢量．在直线运动中，
+瞬时速度的方向就是物体经过该点时的运动方向．瞬时速度
+的大小叫做\textbf{瞬时速率}，简称\textbf{速率}，它是一个表示物体运动快慢
+程度的标量，在某些问题中，如果只需考虑瞬时速度的大小，
 可以用速率的概念．
 
     在匀速运动中，知道了速度，根据位移公式就可以确定运
@@ -550,7 +550,7 @@ $\Delta s/\Delta t$叫做直线的\textbf{斜
 看作是匀变速运动．
 
 \subsection{加速度}
-不同的匀变速运动，即时速度的变化有快有慢，
+不同的匀变速运动，瞬时速度的变化有快有慢，
 汽车开动时，它的速度在几秒钟内从零增加到几十米每秒．而
 发炮时，炮弹的速度在千分之几秒内就从零增加到几百米每
 秒．显然汽车的速度增加得慢，炮弹的速度增加得快．火车
@@ -679,10 +679,9 @@ $\Delta s/\Delta t$叫做直线的\textbf{斜
 把这个公式变形，就得到匀变速直线运动的\textbf{速度公式}
 \[v_t=v_0+at \]
 
-    这个公式表示出匀变速运动的即时速度是怎样随着时间
+    这个公式表示出匀变速运动的瞬时速度是怎样随着时间
 而变化的．根据这个公式，如果已经知道做匀变速运动的物
-体的初速度和加速度，就可以求出物体在任一时刻的即时速
-度．
+体的初速度和加速度，就可以求出物体在任一时刻的瞬时速度．
 
     如果匀变速运动的初速度为零，即$v_0=0$，上式就简化成
 下式：
@@ -1064,7 +1063,7 @@ v^2_t=2as
 匀变速运动的定义，并且通过实验证明了他所下的定义符合
 常见的变速运动．
 
-    在伽利略的时代，技术比较落后，通过直接测定即时速度
+    在伽利略的时代，技术比较落后，通过直接测定瞬时速度
 来验证一个物体是否做匀变速运动，是不可能的．但是，伽利
 略应用巧妙的数学推理，得出初速度为零的匀变速运动物体
 经过的距离与所用时间的平方成正比，即$s\propto t^2$．这样，只要测
@@ -1144,7 +1143,7 @@ $s=\frac{1}{2} v t$，
 \item 从长3.0米的斜面顶端由静止滚下来的小球，末速度是2.5$\Ums$，求小球滚动所用的时间．
 \item 一辆汽车以12$\Ums$的速度行驶，走到一个下坡，得到0.40$\Umsq$的加速度，汽车通过下坡末端的速度是16$\Ums$，这个下坡的长度是多长？
 \item 子弹射中墙壁前的速度是400$\Ums$，射到墙壁后穿进墙壁20厘米，子弹在墙内的运动可以看作匀变速运动，求子弹在墙壁内的加速度和运动时间．
-\item 试证明做匀变速运动的物体在一段时间内的平均速度等于这段时间的中间时刻的即时速度．
+\item 试证明做匀变速运动的物体在一段时间内的平均速度等于这段时间的中间时刻的瞬时速度．
 
 提示：从这段时间开始的时刻计时，在该时刻$t=0$，速
 度为$v_0$．设这段时间为$t$，物体在这段时间内发生的位移$s=v_0t +\frac{1}{2}at^2$，利用平均速度的定义式$\bar v=s/t$，求出这段时间内的平均速度，即可证明．不用位移公式，你能不能证明？
@@ -1377,7 +1376,7 @@ s&=v_0 t-\frac{1}{2}gt^2\\
 把物体看成质点？
 \item 什么是位移？位移和路程有什么区别？在什么情况下位移的大小等于路程？
 \item 什么是匀速直线运动？什么是匀速直线运动的速度？匀速直线运动的位移公式是怎样的？利用位移公式，知道物体的初位置，又知道速度，能不能确定物体在任一时刻的位置？
-\item 什么是变速直线运动？什么是变速直线运动的平均速度？什么是变速直线运动的即时速度？为什么测量平均速度的时间间隔足够短时，得出的平均速度就可以看做是即时速度？
+\item 什么是变速直线运动？什么是变速直线运动的平均速度？什么是变速直线运动的瞬时速度？为什么测量平均速度的时间间隔足够短时，得出的平均速度就可以看做是瞬时速度？
 \item 什么是匀变速直线运动？什么是匀变速直线运动的加速度？速度和加速度的区别是什么？
 \item 匀变速直线运动的速度公式和位移公式是什么？利用这两个公式，知道物体的初位置和初速度，又知道加速度，能不能确定物体在任一时刻的位置和速度？
 匀变速直线运动的两个有用的推论是什么？
