--- a/1/A/03.tex
+++ b/1/A/03.tex
@@ -87,7 +87,7 @@
 \section*{阅读材料：爱因斯坦谈运动的问题}
 有一个基本问题，几千年来都因为它太复杂而含糊不清，这就是运动的问题．……设想有一个静止的物体，没有任何运动，要改变这样一个物体的位置，必须使它受力，如推它，提它，或由其他的物体如马、蒸汽机作用于它．
 我们的直觉认为运动是与推、提、拉等动作相连的，多次的经验使我们进一步深信，要使一个物体运动得愈快，必须用更大的力推它．
-结论好象是很自然的：对一个物体的作用愈强，它的速度就愈大．一辆四匹马驾的车比一辆两匹马驾的车运动得快一些．这样，直觉告诉我们，速率主要是跟作用有关．
+结论好像是很自然的：对一个物体的作用愈强，它的速度就愈大．一辆四匹马驾的车比一辆两匹马驾的车运动得快一些．这样，直觉告诉我们，速率主要是跟作用有关．
 
 ……
 
@@ -916,7 +916,7 @@ $G-ma$，这时表示物体对弹簧秤拉力的弹簧秤读数小于物体
 
     应该指出，物体处于超重或失重状态时，地球作用于物体
 的重力始终存在，大小也没有发生变化，只是物体对支持物的
-压力（或对悬挂物的拉力）发生了变化，看起来好象物体重量
+压力（或对悬挂物的拉力）发生了变化，看起来好像物体重量
 有所增大或减小．
 
 
