--- a/1/A/04.tex
+++ b/1/A/04.tex
@@ -37,13 +37,13 @@
 点所画圆周的切线飞出的．
 
 从这些和类似的观察知道，\textit{曲线运动中速度的方向是时
-刻改变的，质点在某一点（或某一时刻）的即时速度的方向在
+刻改变的，质点在某一点（或某一时刻）的瞬时速度的方向在
 曲线的这一点的切线上}（图~\ref{fig_A_4-3}）．
 
 \begin{figure}[htbp]
     \centering
     \includegraphics{fig/A/4-3.pdf}
-    \caption{曲线运动中某点的即时速度的方向在曲线的这一点的切线上}\label{fig_A_4-3}
+    \caption{曲线运动中某点的瞬时速度的方向在曲线的这一点的切线上}\label{fig_A_4-3}
 \end{figure}
 
 我们知道，速度是个矢量，既有大小，又有方向，不论速度
@@ -430,7 +430,7 @@ v=\omega r
     我们前面讲过，曲线运动中速度的方向是时刻改变的，所
 以曲线运动都是变速运动．同样，质点做匀速圆周运动的时
 候，速度的大小虽然不变，速度的方向却是时刻改变的，它在
-某一点的即时速度的方向就在这一点的圆周切线上．既然匀
+某一点的瞬时速度的方向就在这一点的圆周切线上．既然匀
 速圆周运动的速度方向时刻在改变，因此它跟一般的曲线运
 动一样，是一种变速运动．“匀速圆周运动”一词中的“匀速”
 仅是速率不变的意思．
@@ -751,7 +751,7 @@ $F^{\prime}=0$，即外轨与轮缘不相互挤压．
 \section*{复习题}
 
 \begin{enumerate}
-	\item 物体做曲线运动的条件是什么？做曲线运动的物体在任一时刻的即时速度方向是什么？为什么说曲线运动总是变速运动？
+	\item 物体做曲线运动的条件是什么？做曲线运动的物体在任一时刻的瞬时速度方向是什么？为什么说曲线运动总是变速运动？
 \item 什么叫运动的合成，什么叫运动的分解？怎样进行运动的合成和分解？
 \item 平抛运动可以看做是哪两个运动合成的？它的运动轨迹是什么曲线？怎样确定平抛物体在任一时刻的位置？
 \item 斜抛运动是由哪两个分运动合成的？它的运动轨迹是什么曲线？斜抛运动跟竖直上抛运动和平抛运动之间有什么关系？
