--- a/1/A/05.tex
+++ b/1/A/05.tex
@@ -106,7 +106,7 @@
 \[F\propto \frac{Mm}{R^2} \]
 也可以写做
 \[F=G\frac{Mm}{R^2} \]
-式中的$G$是个比例恒量．
+式中的$G$是个比例常量．
 
 牛顿还研究了卫星绕行星运动的规律，得出结论：行星和卫星之间的引力跟太阳和行星之间的引力是同一种性质的力，遵守同样的规律，即行星和卫星之间的引力也是跟它们的质量乘积成正比，跟它们之间的距离平方成反比．
 
@@ -126,14 +126,14 @@
 
 万有引力定律的发现，是人类在认识自然规律方面取得的一个重大成果．它揭示了自然界物体间普遍存在着的一种基本相互作用——引力作用的规律，它把地球上的力学推广到天体上去，创立了将天体运动和地面物体的运动统一起来的理论，对以后物理学和天文学的发展有很大的影响．万有引力定律的发现，对人类文化历史的发展也有重要的意义．在牛顿以前，人们认为天体的运动是神秘的，隐藏着不可认识的规律．牛顿的发现，使人们解放了思想，建立了信心，相信天地间的事物和支配宇宙的自然规律都是可以认识的．
 
-\section{万有引力恒量的测定}
-万有引力定律公式中的比例常数$G$是适用于任何两个物体的普适恒量，叫做\textbf{万有引力恒量}．
+\section{万有引力常量的测定}
+万有引力定律公式中的比例常数$G$是适用于任何两个物体的普适恒量，叫做\textbf{万有引力常量}．
 
-牛顿发现了万有引力定律，但是没有给出引力恒量$G$的数值．用实验测定$G$的大小是很不容易的，因为一般物体间的引力非常小，很难精确测定，所以在万有引力定律发现后的百余年间，一直没有测出引力恒量的准确数值．
+牛顿发现了万有引力定律，但是没有给出引力常量$G$的数值．用实验测定$G$的大小是很不容易的，因为一般物体间的引力非常小，很难精确测定，所以在万有引力定律发现后的百余年间，一直没有测出引力常量的准确数值．
 有一些科学家，为了测出物体间的引力，曾利用山峰、海岛等质量大的物体做过实验，但都没有取得令人满意的结果．
 
 1798年，即在牛顿发现万有引力定律一百多年以后，英
-国的卡文迪许（$1731 \sim 1810$）巧妙地利用扭秤装置，第一次在实验室里比较准确地测出了万有引力恒量的数值．
+国的卡文迪许（$1731 \sim 1810$）巧妙地利用扭秤装置，第一次在实验室里比较准确地测出了万有引力常量的数值．
 
 \begin{figure}[htbp]
 	\centering
@@ -146,10 +146,10 @@
 来的光线反射到一根刻度尺上．实验时，把两个质量是$m'$的大球放在图中所示的
 位置，它们跟小球的距离相等，由于$m$受到$m'$的吸引，石英丝被扭转，石英丝扭转的角度可以从小镜$M$的反射光在刻度尺上移动的距离求出，根据扭转角度就可以算出$m$与$m'$的引力$F$．在实验过程中，为了排除气流对测量结果的影响，卡文迪许把扭秤装置放到密闭室内，在室外用望远镜进行观测．
 
-卡文迪许经过多次实验，证明了牛顿的万有引力定律是正确的，并且测出了万有引力恒量．
-如果质量的单位用千克，距离的单位用米，力的单位用牛顿，卡文迪许测得的引力恒量是$6.754\times 10^{-11} \UNmqkgq$，同现代公认的$G$等于$6.67\times 10^{-11}\UNmqkgq$很接近．这个数值等于两个质量各为1千克的物体，相距1米时的相互吸引力．
+卡文迪许经过多次实验，证明了牛顿的万有引力定律是正确的，并且测出了万有引力常量．
+如果质量的单位用千克，距离的单位用米，力的单位用牛顿，卡文迪许测得的引力常量是$6.754\times 10^{-11} \UNmqkgq$，同现代公认的$G$等于$6.67\times 10^{-11}\UNmqkgq$很接近．这个数值等于两个质量各为1千克的物体，相距1米时的相互吸引力．
 
-万有引力恒量$G$的数值非常小，所以我们日常接触的那些质量不是很大的物体间的引力就非常小，我们察觉不到．例如两个质量各为100克的苹果，相距10厘米时，它们之间的
+万有引力常量$G$的数值非常小，所以我们日常接触的那些质量不是很大的物体间的引力就非常小，我们察觉不到．例如两个质量各为100克的苹果，相距10厘米时，它们之间的
 引力大小还不到一粒砂子的重量的十万分之一．
 两个质量各为50千克的人相距1米时，他们之间的引力大约等于质量为百分之一毫克的物体的重量，这相当于几百粒尘埃的重量．这
 样小的力我们凭感觉当然是察觉不出来的．但如果物体的质量很大，这个引力就很大，例如地球的质量是很大的，它对地面上物体的吸引力就很显著．太阳和地球之间的吸引力就更大，大约等于$3.56\times 10^{22}$牛，这样大的力如果作用在直径是9000千米的钢柱两端，可以把它拉断！正是由于太阳对地球有这样大的引力，才使得地球围绕太阳转动，而不离去．
@@ -350,7 +350,7 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 \begin{enumerate}
 	\item 地心说和日心说的根本分歧是什么？
 	\item 开普勒在行星运动的研究上有什么重要贡献？他的行星运动三定律的内容是什么？
-	\item 什么是万有引力定律？万有引力定律的发现有什么重要意义？卡文迪许是怎样测量万有引力恒量的？
+	\item 什么是万有引力定律？万有引力定律的发现有什么重要意义？卡文迪许是怎样测量万有引力常量的？
 	\item 怎样应用万有引力定律计算天体的质量？它所根据的原理是什么？
 	\item 地面上的重力加速度因地而异的原因是什么？
 	\item 怎样计算第一宇宙速度？它所根据的原理是什么？什么是第二宇宙速度和第三宇宙速度？
@@ -359,13 +359,13 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 
 \section*{习题}
 \begin{enumerate}
-	\item 在一次测定引力恒量的实验里，已知一个质量是0.80千克的球，以$1.0\times 10^{-10}$牛的力吸引另一个质量是$4.0\times 10^{-3}$千克的球．这两个球相距$4.0\times 10^{-2}$米．地球表面的重力加速度是9.8$\Umsq$，地球的半径是6400千米．根据这些数据计算地球的质量．
+	\item 在一次测定引力常量的实验里，已知一个质量是0.80千克的球，以$1.0\times 10^{-10}$牛的力吸引另一个质量是$4.0\times 10^{-3}$千克的球．这两个球相距$4.0\times 10^{-2}$米．地球表面的重力加速度是9.8$\Umsq$，地球的半径是6400千米．根据这些数据计算地球的质量．
 	\item 行星的质量为$M$，一个围绕它作匀速圆周运动的卫星的轨道半径是$R$，周期是$T$．试用两种方法求出卫星轨道上的向心加速度．	
 	\item 应用通讯卫星可以实现全地球的电视转播．这种卫星位于赤道的上方，相对于地面静止不动，犹如悬在空中一样，叫做同步卫星．同步卫星的周期是多大？计算它的高度和速率．
 	\item 试用万有引力定律证明：对于某个行星的所有卫星来说，$R^3/T^2$是一个恒量．其中$R$是卫星的轨道半径，$T$是卫星的运行周期．
 	\item 行星的密度是$\rho$，靠近行星表面的卫星运行周期是$T$．试证明$\rho T^2$是一个普遍适用的恒量，即它对任何行星都相同．
 	\item 一艘宇宙飞船飞近某一个不知名的行星，并进入靠近该行星表面的圆形轨道，宇航员着手进行预定的考察工作．宇航员能不能仅仅用一只表通过测定时间来测定该行星的密度？说明理由．
-	\item 不考虑地球的自转，求出用地球半径$R$、地面重力加速度$g$和引力恒量$G$表示的地球密度的公式．
+	\item 不考虑地球的自转，求出用地球半径$R$、地面重力加速度$g$和引力常量$G$表示的地球密度的公式．
 	\item 用火箭把宇航员送到月球上，如果他已知月球的半径，那么他用一个弹簧秤和一个已知质量的砝码，能否测出月球的质量？应该怎样测定？	
 
 
