--- a/1/A/07.tex
+++ b/1/A/07.tex
@@ -459,7 +459,7 @@ W_G&= mg\Delta h_1+mg\Delta h_2+mg\Delta h_3+\cdots\\
 
 弹簧的弹性势能跟弹簧被压缩或拉伸的长度有关系．一
 个没有被压缩或拉伸的弹簧，弹性势能为零．
-弹簧被压缩或拉伸的时候，它被压缩或拉伸得越大，克服弹力所做的功越多，弹簧的弹性势能就越大．另外，弹簧的弹性势能还跟弹簧的倔强系数有关系．不同的弹簧被压缩或拉伸相同的长度，倔强系数越大，克服弹力做的功越多，因而弹簧的弹性势能就越大．
+弹簧被压缩或拉伸的时候，它被压缩或拉伸得越大，克服弹力所做的功越多，弹簧的弹性势能就越大．另外，弹簧的弹性势能还跟弹簧的劲度系数有关系．不同的弹簧被压缩或拉伸相同的长度，劲度系数越大，克服弹力做的功越多，因而弹簧的弹性势能就越大．
 
 \section{机械能守恒定律}
 \subsection{机械能的相互转化}
