--- a/1/A/09.tex
+++ b/1/A/09.tex
@@ -109,7 +109,7 @@
 根据胡克定律，在振幅不大（弹簧不超出弹性限度）的情况下，弹簧振子回复力$F$的大小跟弹簧伸长或缩短的长度$x$成正比，而这个长度就是振子对平衡位置的位移的大小，因此回复力$F$的大小跟这个位移$x$的大小成正比．刚刚讲过，回复力的方向跟这个位移的方向相反．
 这样，用下式就可以把回复力的大小和方向都表示出来：
 \[F=-kx\]
-式中$k$是比例常数，对于弹簧振子来说，就等于弹簧的倔强系数．式中的负号表示回复力的方向跟位移的方向相反．
+式中$k$是比例常数，对于弹簧振子来说，就等于弹簧的劲度系数．式中的负号表示回复力的方向跟位移的方向相反．
 
 这种\textit{在跟对平衡位置的位移成正比而方向相反的回复力
 作用下的振动，叫做\textbf{简谐振动}}．
@@ -127,12 +127,12 @@
 
 \subsubsection{简谐振动的周期}
 
-简谐振动的周期跟什么有关呢？在回复力的表示式$F=-kx$中，$k$越大，回复力越大，振子产生的加速度越大，振子来回振动得越快，因而周期越短．在图~\ref{fig_A_9-2} 中用不同倔强系数的弹簧做实验，可以看到倔强系数越大，振子的周期越短．
+简谐振动的周期跟什么有关呢？在回复力的表示式$F=-kx$中，$k$越大，回复力越大，振子产生的加速度越大，振子来回振动得越快，因而周期越短．在图~\ref{fig_A_9-2} 中用不同劲度系数的弹簧做实验，可以看到劲度系数越大，振子的周期越短．
 其次，振子的质量$m$越大，产生的加速度越小，振子来回振动得越慢，因而周期越长．在图~\ref{fig_A_9-2} 中用不同质量的振子做实验，可以看到质量越大，振子的周期越长．
 
 计算表明，弹簧振子的周期由下式确定：
 \[T=2\pi\sqrt{\frac{m}{k}} \]
-可见，\textit{弹簧振子的周期跟质量的平方根成正比，跟弹簧的倔强系数的平方根成反比，而跟振幅无关}．
+可见，\textit{弹簧振子的周期跟质量的平方根成正比，跟弹簧的劲度系数的平方根成反比，而跟振幅无关}．
 
 上式对其他简谐振动也适用，只是对其他简谐振动，$k$的含义不同了．下一节讲到单摆就可以看出这一点．因此上式就是简谐振动的周期公式．
 
@@ -156,8 +156,8 @@
         {速度的方向怎样？\\大小如何变化？}&&&&\\
     \end{tblr}
 \end{table}
-	\item 图~\ref{fig_A_9-2} 所示的弹簧振子的质量是100克，频率为2赫，求弹簧的倔强系数．
-    \item 一个如图~\ref{fig_A_9-2} 所示的弹簧振子的质量是200克，弹簧的倔强系数是$16 \UNslashm$，振幅是2厘米．取水平向右的方向作为正方向．当振子运动到右方最大位移时，回复力和加速度的数值各是多大？当振子运动到左方最大位移时，回复力和加速度的数值又各是多大？这个弹簧振子的周期和频率各是多大？
+	\item 图~\ref{fig_A_9-2} 所示的弹簧振子的质量是100克，频率为2赫，求弹簧的劲度系数．
+    \item 一个如图~\ref{fig_A_9-2} 所示的弹簧振子的质量是200克，弹簧的劲度系数是$16 \UNslashm$，振幅是2厘米．取水平向右的方向作为正方向．当振子运动到右方最大位移时，回复力和加速度的数值各是多大？当振子运动到左方最大位移时，回复力和加速度的数值又各是多大？这个弹簧振子的周期和频率各是多大？
 \end{enumerate}
 
 
