--- a/1/A/app_01.tex
+++ b/1/A/app_01.tex
@@ -297,8 +297,8 @@ $3.65\times 10^4$千米．
 可以看出各个$\Delta s$在误差范围内相等，表示小车是做匀变速运动．
 
 下面我们利用速度图像来求小车的加速度．
-先求出以$A$为起点，小车经过$T $，$ 2T $，$ 3T $，$ \cdots$时的即时速度$v_1 $，$ v_2 $，$ v_3 $，$ \cdots$，即打点计时器打下$B $，$ C $，$ D $，$ \cdots$各点时的即时速度．
-小车是做匀变速直线运动，它在某一段时间内的平均速度等于这段时间中点时刻的即时速度（见第\ref{chapter-rectilinear-motion}章，练习九，第5题）．
+先求出以$A$为起点，小车经过$T $，$ 2T $，$ 3T $，$ \cdots$时的瞬时速度$v_1 $，$ v_2 $，$ v_3 $，$ \cdots$，即打点计时器打下$B $，$ C $，$ D $，$ \cdots$各点时的瞬时速度．
+小车是做匀变速直线运动，它在某一段时间内的平均速度等于这段时间中点时刻的瞬时速度（见第\ref{chapter-rectilinear-motion}章，练习九，第5题）．
 所以
 \[v_1=\frac{s_1+s_2}{2T}, \quad  v_2=\frac{s_2+s_3}{2T},  \quad v_3=\frac{s_3+s_4}{2T},  \quad  \cdots\]
 打点计时器每隔0.02秒打一个点，所以$T=0.02 \Us \times 5=0.1\Us$．
@@ -399,7 +399,7 @@ $3.65\times 10^4$千米．
 把上述的测量数据和计算结果填入自己设计的表中．
 比较用向心力公式得到的$F$和用测力计测得的$F^{\prime}$在误差范围是否相等．
 
-分别改变重锤的质量$m$、半径$r$和弹簧的倔强系数，重做
+分别改变重锤的质量$m$、半径$r$和弹簧的劲度系数，重做
 上述实验，并比较$F$和$F'$．
 
 \section{研究有固定转动轴物体的平衡条件}
