--- a/1/B/08.tex
+++ b/1/B/08.tex
@@ -109,7 +109,7 @@
 \begin{equation}\label{eq_B-8-1}
     m=kIt=kg
 \end{equation}
-式中的$k$是比例恒量，叫做\textbf{电化当量}．从实验知道，电化当量的数值随着被析出的物质种类而不同．
+式中的$k$是比例常量，叫做\textbf{电化当量}．从实验知道，电化当量的数值随着被析出的物质种类而不同．
 某种物质的电化当量在数值上等于通过1库仑电量时析出的这种物质的质量．电化当量$k$的单位是$\UkgCA$．
 
 
