--- a/1/C/02.tex
+++ b/1/C/02.tex
@@ -609,7 +609,7 @@ $\mathcal{E}=B\ell v_1$
 由此可知自感
 电动势$\mathcal{E}=\Delta\phi/\Delta t$跟$\Delta I/\Delta t$成正比，即
 \[\mathcal{E}=L\frac{\Delta I}{\Delta t}\]
-式中的比例恒量$L$叫做线圈的\textbf{自感系数}，简称自感或电感，它
+式中的比例常量$L$叫做线圈的\textbf{自感系数}，简称自感或电感，它
 是由线圈本身的特性决定的．线圈越长，单位长度上的匝数越多，截面积越大，它的自感系数就越大．
 另外，有铁芯的线圈的自感系数，比没有铁芯时要大得多．对于一个现成的线圈来说，自感系数是一定的．
 
