--- a/1/C/app_03.tex
+++ b/1/C/app_03.tex
@@ -37,7 +37,7 @@
 	\centering
 	\caption{}\label{tab_C_10-2}
     \begin{tblr}{rl}
-        万有引力恒量&    $G=6.67\times10^{-11} \UNmqkgq$\\
+        万有引力常量&    $G=6.67\times10^{-11} \UNmqkgq$\\
         摩尔气体恒量&    $R=8.31 \UJmolK $\\
         阿伏伽德罗常数&    $N=6.02\times 10^{23} \Umoln$\\
         静电力恒量&    $k=9.0\times10^9 \UNmqCq $\\
